# cli_parquetizer

./: .pre-commit-config.yaml  Parquetizer.spec  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: pyinstaller-build.yml
src/parquetizer/: __init__.py  _converter.py  _source_handler.py  _utils.py  cli.py
